examples/test/testpolicy19803.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19803
  namespace: namespace273
spec:
  podSelector:
    matchLabels:
      key3: value48
      key23: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value15
          key45: value3
      podSelector:
        matchLabels:
          key24: value9
          key34: value36
